# verifiable-social-media

./: .env.local.example  README.md  hardhat.config.js  middleware.ts  package-lock.json  package.json  tsconfig.json
backend/: main.py  pyproject.toml  read_normalize.py
components/header/: Header.tsx
components/layout/: Layout.tsx
components/message-post/: index.tsx  message-post.tsx
components/user/: user.tsx
components/user-posts/: index.tsx  user-posts.tsx
components/verifier/: index.tsx  verifier.tsx
contracts/: SocialMedia.sol
model_outputs/: Verifier.sol  network.ezkl  proof.json  settings.json  witness.json
models/: verifiable_social_media.ipynb
pages/: _app.tsx
pages/admin/: admin.tsx
pages/api/auth/: [...nextauth].ts
pages/explore/: explore.tsx
pages/profile/: index.tsx  profile.tsx
pages/signin/: error.tsx  index.tsx  signin.tsx
scripts/: deploy.js
test/: example.json
